--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "react-transition-group": "^2.5.3",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
