--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "animejs": "^3.0.1",
     "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-cookie": "^3.0.8",
